# fastapi_course

./: alembic.ini  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_23_1530-aeaa1429f185_create_products_table.py  2025_05_23_1540-81f6b184dba0_create_users_table.py  2025_05_23_1546-5ce61419dca9_create_posts_table.py  2025_05_26_1911-1fb9d78644ff_create_profile_table.py  2025_05_28_0156-b4cde2575a30_create_order_table.py  2025_05_28_1140-eedb808e21ce_create_order_product_association_table.py  2025_05_28_1737-c24828ff6b04_add_count_column_to_association_table.py  2025_05_28_1807-ef7fd18de95a_add_unit_price_column_to_association_.py
api_v1/: __init__.py
api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_associiation.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
